
	* src/extlib/sdl.c:
	Created a new static function that can be used to
	get default masks for the various pixel depths.

	* src/extlib/sdl.c (Lib_VideoInit):
	Made the function use the new default mask function.

	* src/misc/bitmap.c (process_Gradual_BMP):
	now creates a v_object with 0 masks to make use
	of the new defaulting code in the drivers.

2007-07-05	Nicholas Niro	<nik_89@neuroponic.com>
	* src/memory/ebuf.c (Neuro_AllocEBuf):
	Added a check to see if the buffer inside an
	ebuf element is not NULL. Also implemented
	the new debug channel into the module.

2007-06-03	Nicholas Niro	<nik_89@neuroponic.com>
	* src/extlib/x11.c (Lib_RenderUnicode):
	changed the static argument value 16 (bpp) that
	was used to create the v_object for the character
	to a call to get the current default depth in use.

2007-05-30	Nicholas Niro	<nik_89@neuroponic.com>
	* src/events/events.c (addKeyEvent): 
	removed keyboard limitation from only one callback 
	per keys to an infinite amount.

2007-05-29	Nicholas Niro	<nik_89@neuroponic.com>
	* src/extlib/sdl.c (u32 KeySymsTranslateTable): 
	added more elements to the keymap translation 
	table to support more keyboard keys. 
	Theres more work to come with this constant 
	to support all the keys.

2007-05-20	Nicholas Niro	<nik_89@neuroponic.com>
	* src/extlib/sdl.c (Lib_CreateVobject): made created
	vobject be created of the same resolution as the 
	screen as a default (16 bpp default). This is an
	attempt to hack SDL's palette when we load bitmaps.

	* src/misc/bitmap.c (processGradual_BMP): Changed the
	masks that will be passed to Lib_CreateVobject()
	so it only do 16 bpp masks.

2007-04-03	Nicholas Niro	<nik_89@neuroponic.com>
	* src/video/interface.c (Neuro_FlushDraw): removed
	a line that that filled a rectangle in black without
	redrawing the content below the location. This was
	a bug in the TODO list. I suspect this line was part
	of the old method to clean the old location of an image